# Setting_Up_CUDA

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: CMakeLists.txt
lib/include/: map_parser.h  open_file.h  square_utils.h
lib/src/: map_parser.c  open_file.c  square_utils.c
setting_up_cpu/: CMakeLists.txt
setting_up_cpu/src/: main.c
setting_up_cuda/: CMakeLists.txt
setting_up_cuda/src/: main.cu
